--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,6 +92,6 @@ stages:
             displayName: 'Azure App Service Deploy: website'
             inputs:
               appType: webAppLinux
-              azureSubscription: 'Resource Manager - Tailspin - Space Game'
+              azureSubscription: 'sc-wif-rf-pipeline-uks-01'
               appName: '$(WebAppNameDev)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
